--- a/index.html
+++ b/index.html
@@ -3,29 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAADverse</title>
+    <title>SAAD $SQ8</title>
     <style>
         body {
             margin: 0;
             padding: 0;
-            background-image: url('page 1.png');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            height: 100vh;
-            font-family: Arial, sans-serif;
-            color: white;
+            font-family: sans-serif;
         }
-        .content {
-            text-align: center;
-            padding-top: 20vh;
+        section {
+            width: 100%;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #f0d58e; /* Desert-like background color */
+            scroll-snap-align: start;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        /* Optional: Make it full-page scrollable sections */
+        html {
+            scroll-snap-type: y mandatory;
+            overflow-y: scroll;
         }
     </style>
 </head>
 <body>
-    <div class="content">
-        <h1>Welcome to SAADverse</h1>
-        <p>More content coming soon...</p>
-    </div>
+    <section>
+        <img src="page 1.png" alt="The New Born EVM Layer 2 Machine: SAAD $SQ8">
+    </section>
+    <section>
+        <img src="page 2.png" alt="About SAAD">
+    </section>
+    <section>
+        <img src="page 3.png" alt="How To Buy?">
+    </section>
+    <section>
+        <img src="pregnancy.png" alt="1. Pregnancy">
+    </section>
+    <section>
+        <img src="birth.png" alt="2. Birth">
+    </section>
+    <section>
+        <img src="growth.png" alt="3. Growth">
+    </section>
+    <section>
+        <img src="faq.png" alt="Frequently Asked Questions">
+    </section>
+    <section>
+        <img src="tokennomics.png" alt="Our Tokennomics">
+    </section>
 </body>
 </html>
