--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
         <img src="page 3.png" alt="How To Buy?">
     </section>
     <section>
-        <img src="pregnancy.png" alt="1. Pregnancy">
+        <img src="assets/PREGNANY.png" alt="1. Pregnancy">
     </section>
     <section>
-        <img src="birth.png" alt="2. Birth">
+        <img src="assets/birth.png" alt="2. Birth">
     </section>
     <section>
-        <img src="growth.png" alt="3. Growth">
+        <img src="assets/growth.png" alt="3. Growth">
     </section>
     <section>
-        <img src="faq.png" alt="Frequently Asked Questions">
+        <img src="assets/FAQ.png" alt="Frequently Asked Questions">
     </section>
     <section>
-        <img src="tokennomics.png" alt="Our Tokennomics">
+        <img src="assets/TOKENIMICS.png" alt="Our Tokennomics">
     </section>
 </body>
 </html>
