--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
 </head>
 <body>
     <section>
-        <img src="page 1.png" alt="The New Born EVM Layer 2 Machine: SAAD $SQ8">
+        <img src="assets/page 1.png" alt="page 1">
     </section>
     <section>
-        <img src="page 2.png" alt="About SAAD">
+        <img src="assets/page 2.png" alt="page 2">
     </section>
     <section>
-        <img src="page 3.png" alt="How To Buy?">
+        <img src="assets/page 3.png" alt="page 3">
     </section>
     <section>
-        <img src="assets/PREGNANY.png" alt="1. Pregnancy">
+        <img src="assets/PREGNANCY.png" alt="1. PREGNANCY">
     </section>
     <section>
-        <img src="assets/birth.png" alt="2. Birth">
+        <img src="assets/birth.png" alt="2. birth">
     </section>
     <section>
-        <img src="assets/growth.png" alt="3. Growth">
+        <img src="assets/growth.png" alt="3. growth">
     </section>
     <section>
         <img src="assets/FAQ.png" alt="Frequently Asked Questions">
@@ -56,5 +56,7 @@
     <section>
         <img src="assets/TOKENIMICS.png" alt="Our Tokennomics">
     </section>
+    </section>
+        <img src="assets/last slide.png" alt="socials">
 </body>
 </html>
