--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section>
         <img src="assets/TOKENIMICS.png" alt="Our Tokennomics">
     </section>
-    </section>
+    <section>
         <img src="assets/last slide.png" alt="socials">
     </section>
 </body>
