--- a/index.html
+++ b/index.html
@@ -29,11 +29,54 @@
             scroll-snap-type: y mandatory;
             overflow-y: scroll;
         }
+        /* Specific styles for the first section (two-column layout) */
+        #first-section {
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: stretch;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        #first-section .left-column,
+        #first-section .right-column {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            max-width: 50%;
+        }
+        #first-section .right-column iframe {
+            width: 100%;
+            height: 80vh; /* Adjust height to fit the dApp content */
+            border: none; /* Remove border for seamless look */
+        }
+        /* Mobile responsiveness: Stack columns on small screens */
+        @media (max-width: 768px) {
+            #first-section {
+                flex-direction: column;
+            }
+            #first-section .left-column,
+            #first-section .right-column {
+                max-width: 100%;
+            }
+            #first-section .right-column iframe {
+                height: 50vh; /* Smaller height for mobile */
+            }
+        }
     </style>
 </head>
 <body>
-    <section>
-        <img src="assets/page 1.png" alt="page 1">
+    <section id="first-section">
+        <div class="left-column">
+            <img src="assets/page 1.png" alt="page 1">
+        </div>
+        <div class="right-column">
+            <iframe 
+                src="https://dr-pampersmuffin.github.io/saadverse-dapp/" 
+                sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-modals" 
+                title="SAADverse Presale dApp">
+            </iframe>
+        </div>
     </section>
     <section>
         <img src="assets/page 2.png" alt="page 2">
