--- a/index.html
+++ b/index.html
@@ -17,66 +17,61 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: #f0d58e; /* Desert-like background color */
             scroll-snap-align: start;
+            position: relative;
+        }
+        /* Full background for the first section */
+        #first-section {
+            background: url('assets/page 1.png') no-repeat center center;
+            background-size: cover;
+        }
+        /* Themed button for the dApp */
+        .dapp-button {
+            position: absolute;
+            top: 70%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 15px 30px;
+            font-size: 18px;
+            font-weight: bold;
+            color: #fff;
+            background-color: #d4a017; /* Goldish desert sand color */
+            border: 4px solid #8b5a2b; /* Darker brown border for texture */
+            border-radius: 10px;
+            cursor: pointer;
+            text-shadow: 2px 2px 4px #000;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transition: transform 0.2s, background-color 0.2s;
+        }
+        .dapp-button:hover {
+            transform: translate(-50%, -50%) scale(1.1);
+            background-color: #b8860b; /* Darker gold on hover */
+        }
+        .dapp-button::before {
+            content: "🏜️ Enter the SAADverse Presale 🏜️";
         }
         img {
-            max-width: 100%;
-            height: auto;
+            display: none; /* Hide the img tag since we're using it as background */
         }
         /* Optional: Make it full-page scrollable sections */
         html {
             scroll-snap-type: y mandatory;
             overflow-y: scroll;
         }
-        /* Specific styles for the first section (two-column layout) */
-        #first-section {
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: stretch;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        #first-section .left-column,
-        #first-section .right-column {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            max-width: 50%;
-        }
-        #first-section .right-column iframe {
-            width: 100%;
-            height: 80vh; /* Adjust height to fit the dApp content */
-            border: none; /* Remove border for seamless look */
-        }
-        /* Mobile responsiveness: Stack columns on small screens */
+        /* Mobile adjustments */
         @media (max-width: 768px) {
-            #first-section {
-                flex-direction: column;
-            }
-            #first-section .left-column,
-            #first-section .right-column {
-                max-width: 100%;
-            }
-            #first-section .right-column iframe {
-                height: 50vh; /* Smaller height for mobile */
+            .dapp-button {
+                top: 80%;
+                font-size: 16px;
+                padding: 10px 20px;
             }
         }
     </style>
 </head>
 <body>
     <section id="first-section">
-        <div class="left-column">
-            <img src="assets/page 1.png" alt="page 1">
-        </div>
-        <div class="right-column">
-            <iframe 
-                src="https://dr-pampersmuffin.github.io/saadverse-dapp/" 
-                sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-modals" 
-                title="SAADverse Presale dApp">
-            </iframe>
-        </div>
+        <img src="assets/page 1.png" alt="page 1" style="display:none;"> <!-- Hidden for reference -->
+        <a href="https://dr-pampersmuffin.github.io/saadverse-dapp/" target="_blank" class="dapp-button"></a>
     </section>
     <section>
         <img src="assets/page 2.png" alt="page 2">
