--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         .dapp-button {
             position: absolute;
             top: 70%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            left: 70%; /* Moved further right */
+            transform: translateX(-30%); /* Adjusted to balance the new left position */
             padding: 15px 30px;
             font-size: 18px;
             font-weight: bold;
@@ -44,7 +44,7 @@
             transition: transform 0.2s, background-color 0.2s;
         }
         .dapp-button:hover {
-            transform: translate(-50%, -50%) scale(1.1);
+            transform: translateX(-30%) scale(1.1);
             background-color: #b8860b; /* Darker gold on hover */
         }
         .dapp-button::before {
@@ -62,6 +62,8 @@
         @media (max-width: 768px) {
             .dapp-button {
                 top: 80%;
+                left: 50%; /* Center on mobile */
+                transform: translateX(-50%);
                 font-size: 16px;
                 padding: 10px 20px;
             }
@@ -74,28 +76,4 @@
         <a href="https://dr-pampersmuffin.github.io/saadverse-dapp/" target="_blank" class="dapp-button"></a>
     </section>
     <section>
-        <img src="assets/page 2.png" alt="page 2">
-    </section>
-    <section>
-        <img src="assets/page 3.png" alt="page 3">
-    </section>
-    <section>
-        <img src="assets/PREGNANCY.png" alt="1. PREGNANCY">
-    </section>
-    <section>
-        <img src="assets/birth.png" alt="2. birth">
-    </section>
-    <section>
-        <img src="assets/growth.png" alt="3. growth">
-    </section>
-    <section>
-        <img src="assets/FAQ.png" alt="Frequently Asked Questions">
-    </section>
-    <section>
-        <img src="assets/TOKENIMICS.png" alt="Our Tokennomics">
-    </section>
-    <section>
-        <img src="assets/last slide.png" alt="socials">
-    </section>
-</body>
-</html>
+       
