--- a/index.html
+++ b/index.html
@@ -76,4 +76,28 @@
         <a href="https://dr-pampersmuffin.github.io/saadverse-dapp/" target="_blank" class="dapp-button"></a>
     </section>
     <section>
-       
+        <img src="assets/page 2.png" alt="page 2">
+    </section>
+    <section>
+        <img src="assets/page 3.png" alt="page 3">
+    </section>
+    <section>
+        <img src="assets/PREGNANCY.png" alt="1. PREGNANCY">
+    </section>
+    <section>
+        <img src="assets/birth.png" alt="2. birth">
+    </section>
+    <section>
+        <img src="assets/growth.png" alt="3. growth">
+    </section>
+    <section>
+        <img src="assets/FAQ.png" alt="Frequently Asked Questions">
+    </section>
+    <section>
+        <img src="assets/TOKENIMICS.png" alt="Our Tokennomics">
+    </section>
+    <section>
+        <img src="assets/last slide.png" alt="socials">
+    </section>
+</body>
+</html>
