--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         /* Themed button for the dApp */
         .dapp-button {
             position: absolute;
-            top: 70%;
-            left: 70%; /* Moved further right */
+            top: 55%; /* Moved up from 70% to 55% */
+            left: 70%; /* Remains further right */
             transform: translateX(-30%); /* Adjusted to balance the new left position */
             padding: 15px 30px;
             font-size: 18px;
@@ -61,7 +61,7 @@
         /* Mobile adjustments */
         @media (max-width: 768px) {
             .dapp-button {
-                top: 80%;
+                top: 65%; /* Adjusted for mobile */
                 left: 50%; /* Center on mobile */
                 transform: translateX(-50%);
                 font-size: 16px;
