--- a/index.html
+++ b/index.html
@@ -17,63 +17,23 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            background-color: #f0d58e; /* Desert-like background color */
             scroll-snap-align: start;
-            position: relative;
-        }
-        /* Full background for the first section */
-        #first-section {
-            background: url('assets/page 1.png') no-repeat center center;
-            background-size: cover;
-        }
-        /* Themed button for the dApp */
-        .dapp-button {
-            position: absolute;
-            top: 55%; /* Moved up from 70% to 55% */
-            left: 70%; /* Remains further right */
-            transform: translateX(-30%); /* Adjusted to balance the new left position */
-            padding: 15px 30px;
-            font-size: 18px;
-            font-weight: bold;
-            color: #fff;
-            background-color: #d4a017; /* Goldish desert sand color */
-            border: 4px solid #8b5a2b; /* Darker brown border for texture */
-            border-radius: 10px;
-            cursor: pointer;
-            text-shadow: 2px 2px 4px #000;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            transition: transform 0.2s, background-color 0.2s;
-        }
-        .dapp-button:hover {
-            transform: translateX(-30%) scale(1.1);
-            background-color: #b8860b; /* Darker gold on hover */
-        }
-        .dapp-button::before {
-            content: "🏜️ Enter the SAADverse Presale 🏜️";
         }
         img {
-            display: none; /* Hide the img tag since we're using it as background */
+            max-width: 100%;
+            height: auto;
         }
         /* Optional: Make it full-page scrollable sections */
         html {
             scroll-snap-type: y mandatory;
             overflow-y: scroll;
         }
-        /* Mobile adjustments */
-        @media (max-width: 768px) {
-            .dapp-button {
-                top: 65%; /* Adjusted for mobile */
-                left: 50%; /* Center on mobile */
-                transform: translateX(-50%);
-                font-size: 16px;
-                padding: 10px 20px;
-            }
-        }
     </style>
 </head>
 <body>
-    <section id="first-section">
-        <img src="assets/page 1.png" alt="page 1" style="display:none;"> <!-- Hidden for reference -->
-        <a href="https://dr-pampersmuffin.github.io/saadverse-dapp/" target="_blank" class="dapp-button"></a>
+    <section>
+        <img src="assets/page 1.png" alt="page 1">
     </section>
     <section>
         <img src="assets/page 2.png" alt="page 2">
