--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       border-radius:24px;
       background:
         linear-gradient(180deg, rgba(255,255,255,0.9), rgba(255,255,255,0.75)),
-        url("assets/General backgroud.png") center/cover no-repeat;
+        <img src="assets/General backgroud.png"> center/cover no-repeat;
       box-shadow:
         0 20px 40px rgba(0,0,0,0.2),
         inset 0 0 0 2px rgba(140,91,42,0.2);
