--- a/index.html
+++ b/index.html
@@ -9,127 +9,114 @@
       --desert:#f0d58e;
       --sand:#eacb78;
       --brown:#8c5b2a;
-      --card-bg: rgba(255,255,255,0.85);
+      --dapp-w: 40vw;         /* width of the dApp sandbox on desktop */
+      --dapp-h: 78vh;         /* height of the dApp sandbox on desktop */
     }
     *{box-sizing:border-box}
-    html{
-      scroll-snap-type:y mandatory;
-      overflow-y:scroll;
-    }
-    body{
-      margin:0;
-      padding:0;
-      font-family:sans-serif;
-      background:#fff;
-      color:#1a1a1a;
-    }
+    html{ scroll-snap-type:y mandatory; overflow-y:scroll; }
+    body{ margin:0; font-family:sans-serif; color:#1a1a1a; }
+
     section{
       width:100%;
       min-height:100vh;
       display:flex;
-      flex-direction:column;
       justify-content:center;
       align-items:center;
       background-color:var(--desert);
       scroll-snap-align:start;
-      padding:24px;
-    }
-    img{max-width:100%;height:auto;display:block}
-
-    /* ---------- First page split layout ---------- */
-    .hero-wrap{
-      width:100%;
-      max-width:1400px;
-      display:grid;
-      grid-template-columns:1.1fr 1fr;     /* image left, dApp right */
-      gap:28px;
-      align-items:stretch;
-    }
-    .hero-left{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-    }
-
-    /* The themed sandbox “card” that contains the dApp */
-    .dapp-sandbox{
       position:relative;
-      border-radius:24px;
+      padding:0;  /* full-bleed first page */
+    }
+
+    /* ---------- Page 1: full image + overlaid dApp on right ---------- */
+    .hero-full{
+      position:relative;
+      width:100%;
+      height:100vh;
+      overflow:hidden;
+    }
+    .hero-full > img{
+      position:absolute; inset:0;
+      width:100%; height:100%;
+      object-fit:cover;            /* keeps image filling the screen */
+      display:block;
+    }
+
+    /* Themed sandbox overlay */
+    .dapp-sandbox{
+      position:absolute;
+      top:50%;
+      right:24px;
+      transform:translateY(-50%);
+      width:var(--dapp-w);
+      height:var(--dapp-h);
+      min-width:360px;
+      min-height:520px;
+      border-radius:22px;
+      padding:14px;
       background:
         linear-gradient(180deg, rgba(255,255,255,0.9), rgba(255,255,255,0.75)),
-        <img src="assets/General backgroud.png"> center/cover no-repeat;
-      box-shadow:
-        0 20px 40px rgba(0,0,0,0.2),
-        inset 0 0 0 2px rgba(140,91,42,0.2);
-      overflow:hidden;
-      display:flex;
-      flex-direction:column;
-      padding:16px;
+        url("assets/General%20backgroud.png") center/cover no-repeat;
       border:4px solid var(--sand);
-    }
-    .dapp-sandbox::before{
-      /* subtle sunburst/glow rim for desert vibe */
-      content:"";
-      position:absolute; inset:-2px;
-      pointer-events:none;
-      background:radial-gradient(ellipse at 20% 15%, rgba(255,230,140,0.5), transparent 60%);
-      mix-blend-mode:screen;
+      box-shadow:0 24px 50px rgba(0,0,0,0.28), inset 0 0 0 2px rgba(140,91,42,0.18);
+      display:flex; flex-direction:column;
+      overflow:hidden;
     }
     .dapp-header{
       display:flex; align-items:center; justify-content:space-between;
-      gap:12px;
-      padding:8px 12px;
+      gap:10px; padding:8px 10px;
       background:linear-gradient(180deg, rgba(250,240,210,0.9), rgba(255,255,255,0.6));
-      border-radius:16px;
       border:1px solid rgba(140,91,42,0.25);
-      margin-bottom:10px;
-    }
-    .dapp-title{
-      font-weight:800; letter-spacing:0.4px; color:var(--brown);
+      border-radius:12px;
+      color:var(--brown); font-weight:800; letter-spacing:.3px;
+      z-index:2;
     }
     .chip{
       font-size:12px; padding:6px 10px; border-radius:999px;
       background:#fff4cf; border:1px solid rgba(140,91,42,0.25); color:#7a4c1e;
     }
-
-    /* iframe itself */
     .dapp-frame{
+      flex:1 1 auto;
       width:100%;
-      height:calc(100vh - 200px);  /* keeps the card full-height without overflow */
-      min-height:520px;
       border:0;
-      border-radius:14px;
-      background:var(--card-bg);
+      border-radius:12px;
+      margin-top:10px;
+      background:rgba(255,255,255,0.85);
       box-shadow:inset 0 0 0 1px rgba(140,91,42,0.15);
     }
 
-    /* Responsive: stack on small screens */
+    /* Other pages keep your original style */
+    .page{
+      background-color:var(--desert);
+      padding:24px;
+      display:flex; flex-direction:column; justify-content:center; align-items:center;
+    }
+    .page img{ max-width:100%; height:auto; display:block; }
+
+    /* Mobile: put the dApp at bottom, full-width */
     @media (max-width: 980px){
-      .hero-wrap{ grid-template-columns:1fr; }
-      .dapp-frame{ height:65vh; min-height:520px; }
+      :root{ --dapp-w: 92vw; --dapp-h: 68vh; }
+      .dapp-sandbox{
+        right:50%;
+        transform:translate(50%, 0);
+        top:auto; bottom:14px;
+        min-width:0;
+      }
     }
   </style>
 </head>
 <body>
 
-  <!-- ---------- Page 1: split hero + dApp sandbox ---------- -->
+  <!-- Page 1: full image with overlaid dApp on the right -->
   <section>
-    <div class="hero-wrap">
-      <div class="hero-left">
-        <img src="assets/page 1.png" alt="page 1">
-      </div>
+    <div class="hero-full">
+      <img src="assets/page 1.png" alt="page 1 (full screen)">
 
       <aside class="dapp-sandbox" aria-label="SAADverse Presale dApp sandbox">
         <div class="dapp-header">
-          <div class="dapp-title">SAADverse Presale dApp</div>
+          <div>SAADverse Presale dApp</div>
           <div class="chip">$SQ8 • Base</div>
         </div>
-
-        <!--
-          We embed your live dApp with an iframe.
-          Sandbox/allow list lets wallet popups & scripts work while staying isolated.
-          If your dApp needs extra permissions later, add them to 'allow' below.
-        -->
         <iframe
           class="dapp-frame"
           src="https://dr-pampersmuffin.github.io/saadverse-dapp/"
@@ -142,29 +129,29 @@
     </div>
   </section>
 
-  <!-- ---------- Remaining pages unchanged ---------- -->
-  <section>
+  <!-- Remaining pages unchanged, images fill their sections -->
+  <section class="page">
     <img src="assets/page 2.png" alt="page 2">
   </section>
-  <section>
+  <section class="page">
     <img src="assets/page 3.png" alt="page 3">
   </section>
-  <section>
+  <section class="page">
     <img src="assets/PREGNANCY.png" alt="1. PREGNANCY">
   </section>
-  <section>
+  <section class="page">
     <img src="assets/birth.png" alt="2. birth">
   </section>
-  <section>
+  <section class="page">
     <img src="assets/growth.png" alt="3. growth">
   </section>
-  <section>
+  <section class="page">
     <img src="assets/FAQ.png" alt="Frequently Asked Questions">
   </section>
-  <section>
+  <section class="page">
     <img src="assets/TOKENIMICS.png" alt="Our Tokennomics">
   </section>
-  <section>
+  <section class="page">
     <img src="assets/last slide.png" alt="socials">
   </section>
 
