--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
     section{
       width:100%;
-      min-height:100svh;            /* mobile-safe viewport height */
-      min-height:100vh;             /* fallback */
+      min-height:100vh;
       display:flex;
       justify-content:center;
       align-items:center;
@@ -29,22 +28,19 @@
       padding:0;
     }
 
-    /* ---------- Page 1: full image (NO CROP) + overlaid dApp on the right ---------- */
+    /* ---------- Page 1: full image + overlaid dApp on the right ---------- */
     .hero-full{
       position:relative;
       width:100%;
-      height:100svh;                /* avoid iOS/Android browser UI cutting the bottom */
       height:100vh;
       overflow:hidden;
-      background-color:var(--desert); /* shows behind letterboxing if aspect ratios differ */
     }
     .hero-full > img{
       position:absolute; inset:0;
       width:100%; height:100%;
-      object-fit:contain;           /* show entire image without trimming */
-      object-position:center;       /* center it; top content still visible */
+      object-fit:cover;             /* fill the screen */
+      object-position: top center;  /* keep the TOP visible (no top crop) */
       display:block;
-      background-color:var(--desert);
     }
 
     /* Themed sandbox overlay (first page only) */
