--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SAAD $SQ8</title>
   <style>
@@ -13,41 +13,37 @@
       --dapp-h: 78vh;
     }
     *{box-sizing:border-box}
-    html{scroll-snap-type:y mandatory; overflow-y:scroll;}
-    body{margin:0; font-family:sans-serif; color:#1a1a1a;}
+    html{ scroll-snap-type:y mandatory; overflow-y:scroll; }
+    body{ margin:0; font-family:sans-serif; color:#1a1a1a; }
 
     section{
       width:100%;
-      min-height:100dvh;            /* mobile-safe viewport height */
-      min-height:100vh;
-      display:flex; justify-content:center; align-items:center;
+      min-height:100dvh;
+      display:flex;
+      justify-content:center;
+      align-items:center;
       background-color:var(--desert);
       scroll-snap-align:start;
-      position:relative; padding:0;
+      position:relative;
+      padding:0;
     }
 
-    /* ---------- Page 1: NO-CROP hero ---------- */
+    /* ---------- Page 1: force image to fill with no crop/margins ---------- */
     .hero-full{
       position:relative;
       width:100%;
       height:100dvh;
-      height:100vh;
-      display:flex;                 /* center the image naturally */
-      justify-content:center;
-      align-items:center;
-      background-color:var(--desert);
-      overflow:visible;             /* ensure nothing is clipped */
     }
-    .hero-img{
-      max-width:100%;
-      max-height:100%;
-      width:auto;                   /* keep aspect ratio */
-      height:auto;                  /* keep aspect ratio */
+    .hero-full > img{
+      width:100%;
+      height:100%;
       display:block;
-      /* Any leftover space becomes “side bars” or “top/bottom bars” (not a crop) */
+      object-fit:fill;      /* stretch to fill both width + height */
+      margin:0;
+      padding:0;
     }
 
-    /* Themed sandbox overlay (first page only) */
+    /* dApp sandbox */
     .dapp-sandbox{
       position:absolute;
       top:50%;
@@ -83,22 +79,32 @@
     .dapp-frame{
       flex:1 1 auto;
       width:100%;
-      border:0; border-radius:12px; margin-top:10px;
+      border:0;
+      border-radius:12px;
+      margin-top:10px;
       background:rgba(255,255,255,0.85);
       box-shadow:inset 0 0 0 1px rgba(140,91,42,0.15);
     }
 
-    /* Other pages unchanged — borderless full images */
-    .page{background-color:var(--desert); padding:0; display:flex; flex-direction:column; justify-content:center; align-items:center;}
-    .page img{max-width:100%; height:auto; display:block; border:0; outline:0; box-shadow:none;}
+    /* Other pages unchanged */
+    .page{
+      background-color:var(--desert);
+      padding:0;
+      display:flex; flex-direction:column; justify-content:center; align-items:center;
+    }
+    .page img{
+      max-width:100%; height:auto; display:block;
+      border:0; outline:0; box-shadow:none;
+    }
 
-    /* Mobile: dApp at bottom, full-width */
+    /* Mobile: dApp at bottom */
     @media (max-width: 980px){
       :root{ --dapp-w: 92vw; --dapp-h: 68vh; }
       .dapp-sandbox{
         right:50%;
         transform:translate(50%, 0);
-        top:auto; bottom:14px; min-width:0;
+        top:auto; bottom:14px;
+        min-width:0;
       }
     }
   </style>
@@ -108,7 +114,7 @@
   <!-- Page 1 -->
   <section>
     <div class="hero-full">
-      <img class="hero-img" src="assets/page 1.png" alt="page 1 (no crop)">
+      <img src="assets/page 1.png" alt="page 1 (full stretch)">
       <aside class="dapp-sandbox" aria-label="SAADverse Presale dApp sandbox">
         <div class="dapp-header">
           <div>SAADverse Presale dApp</div>
