--- a/index.html
+++ b/index.html
@@ -115,20 +115,20 @@
   <section>
     <div class="hero-full">
       <img src="assets/page 1.png" alt="page 1 (full stretch)">
-      <aside class="dapp-sandbox" aria-label="SAADverse Presale dApp sandbox">
-        <div class="dapp-header">
-          <div>SAADverse Presale dApp</div>
-          <div class="chip">$SQ8 • Base</div>
-        </div>
-        <iframe
-          class="dapp-frame"
-          src="https://dr-pampersmuffin.github.io/saadverse-dapp/"
-          title="SAADverse Presale dApp"
-          sandbox="allow-scripts allow-same-origin allow-popups allow-forms allow-popups-to-escape-sandbox allow-downloads"
-          allow="clipboard-write; payment; web-share"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-      </aside>
+     <!-- dApp sandbox -->
+<aside class="dapp-sandbox" aria-label="SAADverse Presale dApp sandbox">
+  <div class="dapp-header">
+    <div class="headline">⚡ Enter at Your Own Risk! ⚡</div>
+  </div>
+  <iframe
+    class="dapp-frame"
+    src="https://dr-pampersmuffin.github.io/saadverse-dapp/"
+    title="SAADverse Presale dApp"
+    sandbox="allow-scripts allow-same-origin allow-popups allow-forms allow-popups-to-escape-sandbox allow-downloads"
+    allow="clipboard-write; payment; web-share"
+    referrerpolicy="no-referrer-when-downgrade"
+  ></iframe>
+</aside>
     </div>
   </section>
 
