--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     *{box-sizing:border-box}
     html{ scroll-snap-type:y mandatory; overflow-y:scroll; }
     body{ margin:0; font-family:sans-serif; color:#1a1a1a; }
+<!-- 🔥 Sticky yellow moving ticker at the very top -->
+<div class="ticker-bar">
+  <div class="ticker-track">
+    <div class="ticker-item">🔥 Presale LIVE – Join before Phase 1 ends!</div>
+    <div class="ticker-item">🚀 Limited supply of $SQ8 – Don’t miss out!</div>
+    <div class="ticker-item">⚡ Enter at Your Own Risk! ⚡</div>
+    <div class="ticker-item">🌍 Built on Base – Fast, Secure, Low Fees!</div>
+  </div>
+</div>
 
     section{
       width:100%;
