--- a/index.html
+++ b/index.html
@@ -92,9 +92,46 @@
       box-shadow:inset 0 0 0 1px rgba(140,91,42,0.15);
     }
 
-    /* ───── Other pages (unchanged) ───── */
+    /* ───── Other pages ───── */
     .page{ background-color:var(--desert); padding:0; display:flex; flex-direction:column; justify-content:center; align-items:center; }
     .page img{ max-width:100%; height:auto; display:block; border:0; outline:0; box-shadow:none; }
+
+    /* ───── LAST PAGE: left-middle icon strip ───── */
+    .page.last-page{ position:relative; }
+    .last-icons{
+      position:absolute;
+      left:16px;
+      top:50%;
+      transform: translateY(-50%);
+      display:flex;
+      flex-direction:column;
+      gap:10px;
+      z-index:10;
+    }
+    .icon-btn{
+      display:inline-flex; align-items:center; justify-content:center;
+      width:44px; height:44px;
+      border-radius:12px;
+      background: rgba(255,255,255,0.92);
+      border:1px solid rgba(0,0,0,0.15);
+      box-shadow: 0 3px 10px rgba(0,0,0,0.15);
+      text-decoration:none;
+      transition: transform .15s ease, box-shadow .15s ease, background .2s, border-color .2s;
+    }
+    .icon-btn:hover{
+      transform: translateY(-2px);
+      box-shadow: 0 8px 22px rgba(0,0,0,0.22);
+      background:#fff; border-color: rgba(0,0,0,0.25);
+    }
+    .icon-btn svg, .icon-btn span{
+      width:24px; height:24px; fill: currentColor; color:#111; line-height:1;
+    }
+    .icon-btn span{ font-size:22px; }
+
+    /* Mobile tweak: nudge strip a bit higher */
+    @media (max-width: 768px){
+      .last-icons{ top:42%; left:12px; }
+    }
 
     /* Mobile: dApp at bottom */
     @media (max-width: 980px){
@@ -141,7 +178,58 @@
   <section class="page"><img src="assets/growth.png" alt="3. growth"></section>
   <section class="page"><img src="assets/FAQ.png" alt="Frequently Asked Questions"></section>
   <section class="page"><img src="assets/TOKENIMICS.png" alt="Our Tokennomics"></section>
-  <section class="page"><img src="assets/last slide.png" alt="socials"></section>
+
+  <!-- LAST PAGE with left-middle icons -->
+  <section class="page last-page">
+    <!-- Icon strip -->
+    <div class="last-icons">
+      <!-- Whitepaper (📄) -->
+      <a class="icon-btn"
+         href="pdf-viewer.html?title=Whitepaper&pdf=assets/Whitepaper.pdf&bg=assets/General%20backgroud.png"
+         target="_blank" rel="noopener"
+         aria-label="Whitepaper" title="Whitepaper">
+        <span>📄</span>
+      </a>
+
+      <!-- Disclaimer (⚠️) -->
+      <a class="icon-btn"
+         href="pdf-viewer.html?title=Disclaimer&pdf=assets/Disclaimer.pdf&bg=assets/General%20backgroud.png"
+         target="_blank" rel="noopener"
+         aria-label="Disclaimer" title="Disclaimer">
+        <span>⚠️</span>
+      </a>
+
+      <!-- Telegram (SVG) -->
+      <a class="icon-btn"
+         href="https://t.me/YourTelegramLink"
+         target="_blank" rel="noopener"
+         aria-label="Telegram" title="Telegram">
+        <svg viewBox="0 0 24 24" aria-hidden="true">
+          <path d="M9.04 15.49 8.9 19.3c.41 0 .58-.18.79-.4l1.93-1.87 4 2.93c.73.4 1.26.2 1.46-.68l2.64-12.37c.27-1.25-.45-1.74-1.24-1.43L3.2 10.1c-1.2.47-1.18 1.15-.2 1.46l4.2 1.31 9.76-6.16c.46-.28.88-.13.54.18z"/>
+        </svg>
+      </a>
+
+      <!-- X (Twitter) SVG -->
+      <a class="icon-btn"
+         href="https://x.com/YourXHandle"
+         target="_blank" rel="noopener"
+         aria-label="X (Twitter)" title="X (Twitter)">
+        <svg viewBox="0 0 24 24" aria-hidden="true">
+          <path d="M18.244 2H21L14.61 9.31 22 22h-6.24l-4.36-7.2L6.2 22H3l6.86-7.61L2 2h6.36l4 6.63L18.244 2Zm-1.09 18h1.67L8.93 4H7.2l9.954 16Z"/>
+        </svg>
+      </a>
+
+      <!-- Contact Us (📜) -->
+      <a class="icon-btn"
+         href="contact.html"
+         target="_blank" rel="noopener"
+         aria-label="Contact Us" title="Contact Us">
+        <span>📜</span>
+      </a>
+    </div>
+
+    <img src="assets/last slide.png" alt="socials">
+  </section>
 
 </body>
 </html>
