--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@
         </svg>
       </a>
 
-      <!-- Contact Us (📜) -->
-      <a class="icon-btn"
-         href="contact.html"
-         target="_blank" rel="noopener"
-         aria-label="Contact Us" title="Contact Us">
-        <span>📜</span>
-      </a>
+     <!-- Contact Us (📜) -->
+<a class="icon-btn"
+   href="pdf-viewer.html?title=Contact%20Us&pdf=assets/contact_us.pdf&bg=assets/General%20backgroud.png"
+   target="_blank" rel="noopener"
+   aria-label="Contact Us" title="Contact Us">
+  <span>📜</span>
+</a>
     </div>
 
     <img src="assets/last slide.png" alt="socials">
